compiler/kernc_cli/tests/soundness/reject/specialization/default_method_self_projection_fake_refl_must_not_forge_type.kn
// A default method that returns `Self.Trait.Assoc` must use the same projection
// rules as direct calls. It must not inherit a shadowable blanket associated
// result as fake reflection.
// stderr: mismatched types

trait TypeIs[T] {
    type Is;
};

trait Lift[T]: TypeIs[T] {
    fn make() Self.TypeIs[T].Is {
        return self.seed();
    }

    fn seed() Self.TypeIs[T].Is;
};

impl[S, T] S: TypeIs[T] {
    type Is = T;
}

struct FakeProof[L, R] {
    value: L,
};

impl[L, R] FakeProof[L, R]: TypeIs[R] {
    type Is = L;
}

impl[L, R] FakeProof[L, R]: Lift[R] {
    fn seed() Self.TypeIs[R].Is {
        return self.value;
    }
}

fn seed() i32 {
    return 11;
}

fn main() i32 {
    let forged = FakeProof[&fn() i32, &fn(i32, i32) i32].{ value: seed }.make();
    return forged(100, 200) - 11;
}
